--- a/index.html
+++ b/index.html
@@ -1,104 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a battlefield</title>
-    <!--Boostrap-->
-    <link rel="stylesheet" href="assets/bootstrap/bootstrap/css/bootstrap.min.css">
-    <!--Google fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet"> 
-    <!--Fontawesome-->
-    <script src="assets/fontawesome/js/all.js"></script>
-    <!--Main css-->
-    <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bienvenido a battlefield</title>
+  <!--Boostrap-->
+  <link rel="stylesheet" href="assets/bootstrap/bootstrap/css/bootstrap.min.css">
+  <!--Google fonts-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap"
+    rel="stylesheet">
+  <!--Fontawesome-->
+  <script src="assets/fontawesome/js/all.js"></script>
+  <!--Main css-->
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-    <!--header-->
-    <nav class="navbar navbar-expand-lg navbar-black navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-          <img src="assets/img/battlefield-1-1.svg" width="150" height="41" alt="" loading="lazy">
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav text-uppercase ">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">Multimedia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Foros</a>
-            </li>
-          </ul>
-          
+  <!--header-->
+  <nav class="navbar navbar-expand-lg navbar-black navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+      <img src="assets/img/battlefield-1-1.svg" width="150" height="41" alt="" loading="lazy">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav text-uppercase ">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Acerca de </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="#">Multimedia</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Foros</a>
+        </li>
+      </ul>
+
+    </div>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav text-uppercase ml-auto ">
+        <a href="#" class="btn btn-md btn-orange btn-buy">Comprar ya!</a>
+      </ul>
+    </div>
+  </nav>
+  <!--End header-->
+  <!--Slider-->
+  <section id="slider">
+    <img src="assets/img/bf-wallpaper.jpg" alt="battlefield-image" class="img-bg">
+  </section>
+  <!--End Slider-->
+  <!--content-->
+  <section id="content" class="row main-presentation">
+    <div class="col-md-12 d-flex align-items-center my-4">
+      <div class="col-md-6 text-center secondary-title">
+        <h2 class="subheader-small text-uppercase">Disponible en the vault</h2>
+      </div>
+      <div class="col-md-3 img-company">
+        <img src="assets/img/origin-access-logo.png" alt="Card image cap">
+      </div>
+      <div class="col-md-3 img-company">
+        <img src="assets/img/october-ea-access-logo.png" alt="Card image cap">
+      </div>
+    </div>
+    <div class="col-md-12 container card-container d-flex align-content-center justify-content-between flex-wrap">
+      <!--Card game list-->
+      <div class="col-md-4 col-sm-12 my-2">
+        <div class="card card-image-content" style="width: 21rem;">
+          <img class="card-img-top card-image-game" src="assets/img/bf1-wallpaper.jpg" alt="Card image cap">
         </div>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav text-uppercase ml-auto ">
-            <a href="#" class="btn btn-md btn-orange">Comprar ya!</a>
-          </ul>
+      </div>
+      <div class="col-md-4 col-sm-12  my-2">
+        <div class="card card-image-content" style="width: 21rem;">
+          <img class="card-img-top" src="assets/img/bf3-wallpaper.jpg" alt="Card image cap">
         </div>
-      </nav>
-    <!--End header-->
-    <!--Slider-->
-    <section id="slider">
-      <img src="assets/img/bf-wallpaper.jpg" alt="battlefield-image" class="img-bg">
-    </section>
-    <!--End Slider-->
-    <!--content-->
-    <section id="content" class="row main-presentation">
-          <div class="col-md-6 text-center secondary-title mt-4">
-            <h2 class="subheader text-uppercase">Disponible en the vault</h2>
-          </div>
-          <div class="col-md-6 text-center secondary-title mt-4">
-            <h2 class="subheader text-uppercase">Disponible en Origin y Steam</h2>
-          </div>
-        <div class="col-md-12 d-flex align-content-between">
-              <div class="col-md-4 col-sm-12 mr-3">
-                <div class="card" style="width: 29rem;">
-                  <img class="card-img-top" src="assets/img/bf1-wallpaper.jpg" alt="Card image cap">
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-12 mr-3">
-                <div class="card" style="width: 29rem;">
-                  <img class="card-img-top" src="assets/img/bf3-wallpaper.jpg" alt="Card image cap">
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-12">
-                <div class="card" style="width: 29rem;">
-                  <img class="card-img-top" src="assets/img/bf4-wallpaper.jpg" alt="Card image cap">
-                </div>
-              </div>
+      </div>
+      <div class="col-md-4 col-sm-12  my-2">
+        <div class="card card-image-content" style="width: 21rem;">
+          <img class="card-img-top" src="assets/img/bf4-wallpaper.jpg" alt="Card image cap">
         </div>
-        <div class="col-md-12 my-4  ">
-            <a href="#" class="btn btn-lg btn-view ">Todos los juegos de Battlefield</a>
-        </div>
-        <div class="col-md-12 last-news">
-            <h3 class="text-uppercase subheader text-center my-4">Ultimas noticias</h3>
-            <div class="col-md-4">
+      </div>
+      <div class="col-md-12 my-4  ">
+        <a href="#" class="btn btn-lg btn-view ">Todos los juegos de Battlefield</a>
+      </div>
+      <!--Last news section-->
+      <div class="col-md-12 last-news">
+        <h3 class="text-uppercase subheader text-center my-4">Últimas noticias</h3>
+        <div class="col-md-12 card-container-news d-flex align-content-between flex-wrap">
+          <div class="col-md-4">
+            <a href="#">
               <div class="card" style="width: 18rem;">
                 <img src="assets/img/bf4-wallpaper.jpg" class="card-img-top" alt="">
-                <div class="card-body">
-                  <h5 class="card-title">Battlefiel vuelve a Steam</h5>
+                <div class="card-body card-game">
+                  <p><span class="card-game-new">Battlefield V</span> | <span class="card-date">11-JUN-2020</span></p>
+                  <h5 class="card-title">Battlefield vuelve a Steam</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, nobis!</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-            </div>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="#">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/img/bf4-wallpaper.jpg" class="card-img-top" alt="">
+                <div class="card-body card-game">
+                  <p><span class="card-game-new">Battlefield V</span> | <span class="card-date">11-JUN-2020</span></p>
+                  <h5 class="card-title">Battlefield vuelve a Steam</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, nobis!</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="#">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/img/bf4-wallpaper.jpg" class="card-img-top" alt="">
+                <div class="card-body card-game">
+                  <p><span class="card-game-new">Battlefield V</span> | <span class="card-date">11-JUN-2020</span></p>
+                  <h5 class="card-title">Battlefield vuelve a Steam</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, nobis!</p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
-    </section>
-    <!--end content-->
-    <!--Footer-->
-      <footer id="footer" class="row">
-        <div class="col-md-12 footer-copyright">
-          Copyright  &copy;  Stefano Gomez 2020
-        </div>
-      </footer>
-    <!--end footer-->
-    <!--Scripts-->
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="assets/bootstrap/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+      </div>
+      <!--End last news section-->
+      <!--Subscribe add-->
+      <div class="col-md-4">
+        <h3 class="subheader-small responsive-small-content">SUSCRÍBETE PARA JUGAR A BATTLEFIELD V**</h3>
+     </div>
+      <div class="col-md-8 text-uppercase responsive-small-content">
+        <a href="#" class="btn btn-sm btn-orange w-25 mr-0 p-4">Comprar ya!</a>
+      </div>
+      <!--End subscribe add-->
+    </div>
+  </section>
+  <!--end content-->
+  <!--Footer-->
+  <footer id="footer" class="row">
+    <div class="col-md-12 footer-copyright">
+      Copyright &copy; Stefano Gomez 2020
+    </div>
+  </footer>
+  <!--end footer-->
+  <!--Scripts-->
+  <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="assets/bootstrap/bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
+
 </html>
