--- a/index.html
+++ b/index.html
@@ -28,14 +28,35 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav text-uppercase ">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Acerca de </a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Acerca de
+          </a>
+          <div class="dropdown-menu navbar-black " aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link " href="#">Multimedia</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Multimedia
+          </a>
+          <div class="dropdown-menu navbar-black " aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Foros</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Foros
+          </a>
+          <div class="dropdown-menu navbar-black " aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
         </li>
       </ul>
 
@@ -49,30 +70,59 @@
   <!--End header-->
   <!--Slider-->
   <section id="slider">
-    <img src="assets/img/bf-wallpaper.jpg" alt="battlefield-image" class="img-bg">
+    <div class="alert-game">
+      <img src="assets/img/bf-logo-generic.png" alt="">
+      <h2 class="text-center">Vuelve a Steam</h2>
+      <p class="text-center">Redescubre la clásica guerra sin cuartel en cinco títulos</p>
+      <div class="btn-group w-100">
+        <a href="#" class="btn btn-sm btn-orange alert-game-btn">ELIGE TU BATALLA</a>
+        <a href="#" class="btn btn-sm btn-view btn-dark alert-game-btn">Más información</a>
+      </div>
+    </div>
   </section>
   <!--End Slider-->
   <!--content-->
   <section id="content" class="row main-presentation">
-    <div class="col-md-12 d-flex align-items-center my-4">
-      <div class="col-md-6 text-center secondary-title">
-        <h2 class="subheader-small text-uppercase">Disponible en the vault</h2>
-      </div>
-      <div class="col-md-3 img-company">
-        <img src="assets/img/origin-access-logo.png" alt="Card image cap">
-      </div>
-      <div class="col-md-3 img-company">
-        <img src="assets/img/october-ea-access-logo.png" alt="Card image cap">
+    <div class="col-md-12 card-temporaly card-container">
+      <div class="alert-game-responsive">
+        <img src="assets/img/bf-logo-generic.png" alt="">
+        <h2 class="text-center">Vuelve a Steam</h2>
+        <p class="text-center">Redescubre la clásica guerra sin cuartel en cinco títulos</p>
+        <div class="btn-group w-100">
+          <a href="#" class="btn btn-sm btn-orange alert-game-btn mx-2">ELIGE TU BATALLA</a>
+          <a href="#" class="btn btn-sm btn-view btn-dark alert-game-btn mx-2">Más información</a>
+        </div>
       </div>
     </div>
-    <div class="col-md-12 container card-container d-flex align-content-center justify-content-between flex-wrap">
+    <div class="col-lg-12 col-md-12 d-flex align-items-center my-4">
+      <div class="col-lg-6 col-md-12 text-center secondary-title">
+        <h2 class="subheader-small text-uppercase">Disponible en the vault</h2>
+      </div>
+      <!--Company logos-->
+      <div class="col-lg-3 col-md-12 logo-normal-size">
+        <img src="assets/img/origin-access-logo.png" alt="Card image cap">
+      </div>
+      <div class="col-lg-3 col-md-12 logo-normal-size">
+        <img src="assets/img/october-ea-access-logo.png" alt="Card image cap">
+      </div>
+      <!--End company logos-->
+    </div>
+    <!--Company responsive logos-->
+    <div class="col-lg-3 col-md-12 logo-responsive">
+      <img src="assets/img/origin-access-logo.png" alt="Card image cap">
+    </div>
+    <div class="col-lg-3 col-md-12 logo-responsive">
+      <img src="assets/img/october-ea-access-logo.png" alt="Card image cap">
+    </div>
+    <!--End company logos-->
+    <div class="col-md-12 card-container d-flex align-content-center justify-content-between flex-wrap">
       <!--Card game list-->
       <div class="col-md-4 col-sm-12 my-2">
         <div class="card card-image-content" style="width: 21rem;">
           <img class="card-img-top card-image-game" src="assets/img/bf1-wallpaper.jpg" alt="Card image cap">
         </div>
       </div>
-      <div class="col-md-4 col-sm-12  my-2">
+      <div class="col-md-4 col-sm-12 my-2">
         <div class="card card-image-content" style="width: 21rem;">
           <img class="card-img-top" src="assets/img/bf3-wallpaper.jpg" alt="Card image cap">
         </div>
@@ -129,13 +179,19 @@
       </div>
       <!--End last news section-->
       <!--Subscribe add-->
-      <div class="col-md-4">
-        <h3 class="subheader-small responsive-small-content">SUSCRÍBETE PARA JUGAR A BATTLEFIELD V**</h3>
+      <div class="col-md-4 responsive-small-content">
+        <h3 class="subheader-small ">SUSCRÍBETE PARA JUGAR A BATTLEFIELD V**</h3>
      </div>
       <div class="col-md-8 text-uppercase responsive-small-content">
-        <a href="#" class="btn btn-sm btn-orange w-25 mr-0 p-4">Comprar ya!</a>
+        <a href="#" class="btn btn-sm btn-orange w-25 mr-0 p-3">Comprar ya!</a>
       </div>
       <!--End subscribe add-->
+      <!--More information content-->
+      <div class="col-md-12 mt-4 responsive-small-content">
+        <p class="text-white">*PARA JUGAR ES NECESARIO TENER BATTLEFIELD V PARA LA PLATAFORMA CORRESPONDIENTE (SE VENDE POR SEPARADO), TODAS LAS ACTUALIZACIONES DEL JUEGO, CONEXIÓN A INTERNET Y UNA CUENTA EA.</p>
+          <p class="text-white">**EXISTEN CONDICIONES Y LIMITACIONES; PUEDE QUE ALGUNOS TÍTULOS NO ESTÉN INCLUIDOS. MÁS INFORMACIÓN EN origin.com/store/origin-access/terms.</p>
+      </div>
+      <!--end more information content-->
     </div>
   </section>
   <!--end content-->
@@ -148,6 +204,7 @@
   <!--end footer-->
   <!--Scripts-->
   <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="assets/bootstrap/bootstrap/js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
 
