--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <script src="assets/fontawesome/js/all.js"></script>
   <!--Main css-->
   <link rel="stylesheet" href="css/main.css">
+  <!--Scroll reveal-->
+  <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
